--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -460,7 +460,7 @@ ul#main-nav {
     background-color: #f7f9f9;
     margin: 0 auto;
     list-style: none;
-    font-weight: 1em;
+    font-size: 1em;
     color: #706a66;
 }
 #main-nav li {
